Updated Apache2 config

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -5,7 +5,7 @@
 	<Directory />
 		DirectoryIndex index.html
 	</Directory>
-	
+
 	Alias /libs /var/www/gscp.we-are-friendly.de/ressources
 
 	<IfModule mod_perl.c>
@@ -14,14 +14,22 @@
 
 		PerlAddVar MasonCompRoot /var/www/gscp.we-are-friendly.de/htdocs/
 		PerlSetVar MasonDataDir /var/www/gscp.we-are-friendly.de/htdocs-data/
-		
+
 		PerlPostReadRequestHandler WAF::Apache2::DBI::Connect
 
 		<FilesMatch \.html$>
 			SetHandler perl-script
 			PerlHandler HTML::Mason::ApacheHandler
 		</FilesMatch>
-		
+
 		PerlCleanupHandler WAF::Apache2::DBI::Disconnect
 	</IfModule>
+
+	ErrorLog /var/www/gscp.we-are-friendly.de/logs/error.log
+
+	# Possible values include: debug, info, notice, warn, error, crit,
+	# alert, emerg.
+	LogLevel warn
+
+	CustomLog /var/www/gscp.we-are-friendly.de/logs/access.log combined
 </VirtualHost>
