--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -16,6 +16,7 @@
 		PerlSetVar MasonDataDir /var/www/gscp.we-are-friendly.de/htdocs-data/
 
 		PerlPostReadRequestHandler WAF::Apache2::DBI::Connect
+		PerlPostReadRequestHandler WAF::Apache2::Core::OpenID
 
 		<FilesMatch \.html$>
 			SetHandler perl-script
